# revobank-api

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  koyeb.yaml  procfile  requirements.txt  wait-for-it.sh
.qodo/: history.sqlite
.qodo/migrations/: {timestamp}_add_budgets_table.py
.qodo/migrations/migrations/versions/: 20250327_add_categories.py  6394f7fd54e9_initial_migration.py  ac008f075d44_add_budget_model.py
revobank-api/: .coverage  .env  .gitignore  app.py  models.py  pyproject.toml  requirements.txt  setup.py  start.sh  test_db.py
revobank-api/app/: .env  __init__.py  acc&tranendpoint.md  accountext.md  config.py  models.py  transactionexp.md  userendpointtest.md
revobank-api/app/middleware/: logger_middleware.py
revobank-api/app/models/: __init__.py  account.py  bill.py  budget.py  transaction.py  transaction_category.py  user.py
revobank-api/app/routes/: accounts.py  auth.py  bills.py  budgets.py  transaction_categories.py  transactions.py  users.py
revobank-api/app/services/: auth.py
revobank-api/migrations/versions/: 07dde8d84346_add_category_model.py  45f9f67b0776_recreate_missing_migration.py  8a74a9ee3fbb_initial_migration.py  add_bills_table.py  b585e4d3ef4b_added_user_status.py  e9a57901ca7d_upgrade_db.py  f889460d7964_add_cascade_delete_to_transactions.py  initial_setup.py
revobank-api/revobank_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
revobank-api/tests/: .env.test  confest.py  conftest.py  test_accounts.py  test_auth.py  test_transactions.py
